@@ -1,7 +1,0 @@
-!include( ../../../script.plugin.config ){
-  message( "Oops -- No custom build options specified" )
-}
-
-HEADERS += PLOT_UPDATE.h
-
-SOURCES += PLOT_UPDATE.cpp
