@@ -172,9 +172,7 @@ SUBDIRS += plugins/script/NEW_DIALOG
 SUBDIRS += plugins/script/NORMALIZE
 SUBDIRS += plugins/script/OHLC
 SUBDIRS += plugins/script/PDI
-SUBDIRS += plugins/script/PLOT_DELETE
-SUBDIRS += plugins/script/PLOT_NEW
-SUBDIRS += plugins/script/PLOT_UPDATE
+SUBDIRS += plugins/script/PLOT
 SUBDIRS += plugins/script/PO
 SUBDIRS += plugins/script/PROCESS
 SUBDIRS += plugins/script/QUOTE_DATABASE
